# BIManalyst_g_12

./: .gitignore  A1_Group12.py  A5  ElementLeveler.py  FreeHeightChecker.py  LICENSE  README.md  main.py  pyproject.toml  test.py
A2/: README.md  Scoped use case.bpmn  Whole use case.bpmn
A3/: CLI_main.py  README.md  anotherREADME.md  main.py  new_main.py  requirements.txt
A3/AirflowEstimator/: AirFlowEstimator.py  __init__.py
A3/BcfGenerator/: BcfGenerator.py  Test_BCF.py  __init__.py
A3/Modules/: AirFlowEstimator.py  VentilationSystemAnalyzer.py  __init__.py  menu.py  setupFunctions.py
A3/OLD_scripts/: FreeHeightChecker.py  functions.py  old_main.py
A3/VentilationSystemAnalyzer/: VentilationSystemAnalyzer.py  __init__.py
A3/menu/: menu.py
A3/outputFiles copy/: HVAC_Issues.bcfzip
A3/pictures/: README.md
A3/scripts/: setupFunctions.py  systemAnalyzer.py
A4/: README.md  Tutorial.ipynb
A5/: README.md
Other/: Classification.py
ifcFiles/: misplacedElements_REPORT_2025-09-29.txt
scripts/: ElementLeveler.py  FreeHeightChecker.py  functions.py  menuFunctions.py  pressureLossDB.py  setupFunctions.py  systemAnalyzer.py
